fixes: - reduta ordona now in html instead of iframe (not working on local) - fix music player button rendering issue on mobile - dynamic z index for windows - fixed poster going off bounds and being positioned ugly on some screens - misc

--- a/src/index.css
+++ b/src/index.css
@@ -173,3 +173,17 @@ button:not(:disabled).active {
     height: auto;
     image-rendering: pixelated;
 }
+
+#ogloszenie-plakat .window-body {
+    height: 80vh;
+    max-height: max-content;
+    min-height: 150px;
+    overflow-y: auto;
+    resize: vertical;
+}
+
+@media screen and (max-height: 800px) {
+    #ogloszenie-plakat .window-body {
+        height: 55vh;
+    }
+}
